<resources>
    <string name="app_name">Paymentsave</string>
    <string name="run_sale">Pay</string>
    <string name="run_refund">Refund</string>
    <string name="reverse_last">Reverse Last</string>
    <string name="reverse_uti">Reverse Last by UTI</string>
    <string name="preauth">Preauth</string>
    <string name="completion">Completion</string>
    <string name="query_transaction">Query Last Transaction by UTI</string>
    <string name="x_report">Print X Report</string>
    <string name="z_report">Print Z Report</string>
    <string name="history_report">Print History Report</string>
    <string name="cancel_trans">Cancel Transaction</string>
    <string name="exit">Exit App</string>
    <string name="choose_option">Choose One Option</string>
    <string name="view_trans_reports">View Transaction Results/Reports</string>
    <string name="view_status">View Status Events</string>
    <string name="title_response_fragment">Transaction Response</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="hint_amount">Amount (minor units)</string>
    <string name="hint_rrn">Enter rrn here</string>
    <string name="hint_cancel_time">Enter cancel time in milliseconds</string>
    <string name="next">Next</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">—</string>
    <string name="percent">%</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="cancel">cancel</string>
    <string name="equal">=</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dubleZero">00</string>
    <string name="welcome_to">welcome to</string>
    <string name="payment">Payment</string>
    <string name="save">save</string>
    <string name="let_s_get_started_setting_up_your_new_device">Let’s get started setting up your new device</string>
    <string name="setup_your_new_device">Setup your new device</string>
    <string name="set_your_supervisor_pin">Set your supervisor pin</string>
    <string name="you_ll_use_this_pin_to_access_this_service">You’ll use this PIN to access this service</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="start_taking_payments">Start taking payments</string>
    <string name="_0_00">£0.00</string>
    <string name="please_enter_a_valid_amount">Please enter a valid amount</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="profile">Profile</string>
    <string name="or_activate_using_your_account_details">or activate using your account details</string>
    <string name="text_link">Text Link</string>
    <string name="activate">Activate</string>
    <string name="click_on_the_link_to_approve_this_device">Click on the link to approve this device</string>
    <string name="enter_the_code">enter the code</string>
    <string name="we_ve_emailed_a_link_to">We’ve emailed a link to</string>
    <string name="please_enter_a_valid_pin">* Please enter a valid pin</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="payment_status">Payment Status</string>
    <string name="refund_payment">Refund payment</string>
    <string name="network">Network Setting</string>
    <string name="power_settings">Power Settings</string>
    <string name="power">Power</string>
    <string name="account">Account</string>
    <string name="gratuity">Gratuity</string>
    <string name="total">Total</string>
    <string name="order_no">Order no.</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="payments">Payments</string>
    <string name="print_or_send_receipt">Print or send receipt</string>
    <string name="status">Status</string>
    <string name="delete">Delete</string>
    <string name="page_1_of_1">page 1 of 1</string>
    <string name="canceled">Cancelled</string>
    <string name="main_menu">Main Menu</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="log_out">Log Out</string>
    <string name="wi_fi_settings">Wi-Fi Settings</string>
    <string name="apn_settings">APN Settings</string>
    <string name="cellular_settings">Cellular Settings</string>
    <string name="display_settings">Display Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="would_you_like_to_leave_a_tip">Would you like to leave a tip ?</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="go_back">Go Back</string>
    <string name="pre_auth">Pre-Auth</string>
    <string name="test_acquiring_connections">Test Acquiring Connections</string>
    <string name="reversal">Reversal</string>
    <string name="success">Success</string>
    <string name="_00_00pm">00:00pm</string>
    <string name="history">History</string>
    <string name="device">Device Settings</string>
    <string name="card_not_present">Card Not Present</string>
    <string name="x_report_end_of_shift">X Report(end of shift)</string>
    <string name="z_report_end_of_day">Z Report(end of day)</string>
    <string name="administration">Administration</string>
    <string name="system_info">System Info</string>
    <string name="submit_transactions">Submit Transactions</string>
    <string name="history_report_two">History Report</string>
    <string name="user_manager">User Manager</string>
    <string name="dcc_rates">DCC Rates</string>
    <string name="search">Search ...</string>
    <string name="back_space_btn">⌫</string>
    <string name="declined">Declined</string>
    <string name="approved">Approved</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="transaction_time">Transaction Time</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">Apply</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="clear">clear</string>
    <string name="reports">Reports</string>
    <string name="voidText">Void</string>
    <string name="report_details">Report Details</string>
    <string name="action">Action</string>
    <string name="sale">Sale</string>
    <string name="refund">Refund</string>
    <string name="cashback">Cashback</string>
    <string name="email_link_again">Email link again</string>
    <string name="input_your_supervisor_pin">Input your supervisor pin</string>
    <string name="verify">Verify</string>
    <string name="tnx_type">Tnx. Type</string>
    <string name="report_type">Report Type</string>
    <string name="details">Details</string>
    <string name="select_a_period_within_the_last_31_days">Select a period within the last 31 days</string>
    <string name="view_summery">View summary</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="pay_now">Pay</string>
    <string name="skip_receipt">Skip Receipt</string>
    <string name="view_cardholder_receipt">View CardHolder Receipt</string>
    <string name="view_merchant_receipt">View Merchant Receipt</string>
    <string name="print_cardholder_receipt">Print CardHolder Receipt</string>
    <string name="print_merchant_receipt">Print Merchant Receipt</string>
    <string name="receipt">Receipt</string>
    <string name="request_access_code">Activate Now</string>
    <string name="log_in_as_supervisor">Log In as Supervisor</string>
    <string name="send">SEND</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="support">Support</string>
    <string name="no_history_found">No History Found</string>
    <string name="refunded">Refunded</string>
    <string name="voided">Voided</string>
    <string name="confirm_supervisor_pin">Confirm Supervisor PIN</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_update_your_supervisor_pin">Are you sure, you want to update your supervisor PIN ?</string>
    <string name="update_supervisor_pin">Update Supervisor PIN</string>
    <string name="verify_supervisor_pin">Verify Supervisor PIN</string>
    <string name="payment_method">Payment Method</string>
    <string name="your_payment_was_declined">Your Payment was declined</string>
    <string name="your_payment_was_successful">Your Payment was successful</string>
    <string name="your_payment_was_cancelled">Your Payment was cancelled</string>
    <string name="will_be_back_soon">Will be back soon !</string>
    <string name="service_under_maintenance">Service Under Maintenance</string>
    <string name="exit_and_try_again_later">Exit and Try again later</string>
    <string name="enter_activation_code">Enter activation code</string>
    <string name="device_activation_form">Device Activation Form</string>
    <string name="change_supervisor_pin">Change Supervisor PIN</string>
    <string name="supervisor_pin_change">Supervisor PIN Change</string>
    <string name="please_verify_your_business_mid_before_proceed">Please verify your business MID before proceed</string>
    <string name="business_mid">BUSINESS MID</string>
    <string name="please_enter_your_mid">Please enter your MID</string>
    <string name="please_enter_a_valid_numeric_value">* Please enter a valid numeric value</string>
    <string name="multiple_invalid_attempt_may_block_your_device">* Multiple invalid attempt may block your device.</string>
    <string name="send_request">Send Request</string>
    <string name="we_ve_send_an_email_to_your_provided_business_email_nplease_find_the_email_and_follow_the_steps">We\'ve send an email to your provided business email.\nPlease find the email and follow the steps.</string>
    <string name="check_business_email">Check Business Email</string>
    <string name="split_bill">Split Bill</string>
    <string name="equal_split">Equal Split</string>
    <string name="custom_split">Custom Split</string>
    <string name="choose_your_pay_option">Choose Your Pay Option</string>
    <string name="successful">Successful</string>
    <string name="your_have_successfully_requested_for_z_report_reconciliation">Your have successfully requested for z-report (reconciliation).</string>
    <string name="print_report">Print Report</string>
    <string name="close">Close</string>
    <string name="enable_general_mode">Enable Standalone Mode</string>
    <string name="exit_app">Exit App</string>
    <string name="no_thanks">no thanks</string>
    <string name="customer_receipt">Customer Receipt</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="do_you_want_to_print_the_receipt">Do you want to print the receipt ?</string>
    <string name="merchant_receipt">Merchant Receipt</string>
    <string name="email_receipt">Email Receipt</string>
    <string name="qr_receipt">QR Receipt</string>
    <string name="amount">Amount</string>
    <string name="created_at">Created At</string>
    <string name="expired_at">Expired At</string>
    <string name="description">Description</string>
    <string name="business_mids">Business MID</string>
    <string name="_00_00_gbp">00.00 GBP</string>
    <string name="view_qr_amp_pay"><![CDATA[View QR & Pay]]></string>
    <string name="total_amount">Total Amount</string>
    <string name="your_payment_has_been_successfully_done">Your payment has been successfully done.</string>
    <string name="payment_success">Payment Success !</string>
    <string name="back_to_home">Done</string>
</resources>