<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.paymentsave.paymentsave.coreapp.activities.ReceiptPrintActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="14dp"
        android:text="@string/transaction_status" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/result_icon"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/cancel_icon" />

        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/canceled"
            android:textColor="@color/amt_text_color"
            android:textSize="@dimen/text_size_xxx_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            android:text="@string/do_you_want_to_print_the_receipt"
            android:textColor="@color/amt_text_color"
            android:textSize="@dimen/text_size_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="240dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/email_receipt_btn"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/radius_green_message"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="4dp"
                    android:src="@android:drawable/ic_dialog_email"
                    app:tint="@color/gray_light_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_receipt"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/qr_code"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/radius_green_message"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/baseline_qr_code_24"
                    app:tint="@color/gray_light_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_receipt"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/customer_receipt_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="170dp"
            android:background="@drawable/radius_btn_bg"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/customer_receipt" />


        <Button
            android:id="@+id/merchant_receipt_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/radius_btn_bg"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/merchant_receipt" />


        <Button
            android:id="@+id/no_receipt_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/radius_transparent_btn"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/no_thanks"
            android:textColor="@color/amt_text_color" />


    </RelativeLayout>

</LinearLayout>