<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/close_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:background="@drawable/radius_white_btn"
            android:src="@drawable/baseline_close_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/transaction_details"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_transparent_btn"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text=""
                android:textColor="#D32F2F"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="12dp"
                android:background="#E0E0E0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="#757575"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/_00_00_gbp"
                android:textColor="#212121"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_mids"
                android:textColor="#757575"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text=""
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#757575"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text=""
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                android:textColor="#757575"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCreatedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text=""
                android:textColor="#212121" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expired_at"
                android:textColor="#757575"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvExpiredAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#212121" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/view_qr_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radius_btn_bg"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/view_qr_amp_pay" />

<!--                <Button-->
<!--                    android:id="@+id/send_email_btn"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:textSize="@dimen/text_size_small"-->
<!--                    android:background="@drawable/radius_btn_bg"-->
<!--                    android:text="@string/send_via_email" />-->

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</ScrollView>